Add missing copyright header

--- a/ts/packages/shell/src/renderer/newTab.html
+++ b/ts/packages/shell/src/renderer/newTab.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<!-- Copyright (c) Microsoft Corporation.
+ Licensed under the MIT License. -->
+
 <html>
   <head>
     <title>New Tab</title>
