Fixed tab removal issue, added "closeAllTabs" action (#1533)
- fixed the tab removal bug
- added "closeAllTabs" action

--- a/ts/packages/shell/src/renderer/viewHost.html
+++ b/ts/packages/shell/src/renderer/viewHost.html
@@ -400,6 +400,10 @@
       ipcRenderer.on("browser-navigation-updated", (_, navigationState) => {
         updateNavigationState(navigationState);
       });
+
+      ipcRenderer.on("browser-tab-closed", (_, tabId) => {
+        document.querySelector(`div.tab[data-tab-id="${tabId}"]`)?.remove();
+      });
     </script>
   </body>
 </html>
