--- a/ts/packages/shell/src/renderer/searchMenuView.html
+++ b/ts/packages/shell/src/renderer/searchMenuView.html
@@ -3,14 +3,14 @@
  Licensed under the MIT License. -->
 
 <html>
-
-<head>
-    <link href="./assets/searchMenuView.less" type="text/css" rel="stylesheet" />
+  <head>
+    <link
+      href="./assets/searchMenuView.less"
+      type="text/css"
+      rel="stylesheet"
+    />
     <script type="module" src="./src/searchMenuView.ts"></script>
-</head>
+  </head>
 
-<body>
-
-</body>
-
+  <body></body>
 </html>
